// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrevNextBar renders \`null\` when passed a page that isn't in the book tree 1`] = `
<div
  className="prev-next-bar-wrapper disable-print"
  data-analytics-region="prev-next"
  style={
    Object {
      "--content-text-width": "82.5rem",
      "--neutral-darkest": "#e5e5e5",
      "--text-color": "#424242",
      "--text-regular-line-height": "2.5rem",
    }
  }
>
  <span
    aria-hidden={true}
  />
  <a
    aria-label="Next Page"
    className="content-link prev-next-link side-right"
    data-analytics-label="next"
    data-testid="content-link-test"
    href="books/book-slug-1/pages/test-page-1"
    onClick={[Function]}
    style={
      Object {
        "--link-color": "#027EB5",
        "--link-hover": "#0064A0",
      }
    }
  >
    Next
    <svg
      aria-hidden="true"
      className="prev-next-icon right-arrow"
      viewBox="0 0 24 24"
    >
      <path
        d="M10.707 17.707 16.414 12l-5.707-5.707-1.414 1.414L13.586 12l-4.293 4.293z"
        fill="currentColor"
      />
    </svg>
  </a>
</div>
`;

exports[`PrevNextBar renders \`null\` with no page or book 1`] = `null`;

exports[`PrevNextBar renders correctly when you pass a page and book 1`] = `
<div
  className="prev-next-bar-wrapper disable-print"
  data-analytics-region="prev-next"
  style={
    Object {
      "--content-text-width": "82.5rem",
      "--neutral-darkest": "#e5e5e5",
      "--text-color": "#424242",
      "--text-regular-line-height": "2.5rem",
    }
  }
>
  <a
    aria-label="Previous Page"
    className="content-link prev-next-link side-left"
    data-analytics-label="prev"
    data-testid="content-link-test"
    href="books/book-slug-1/pages/2-test-page-3"
    onClick={[Function]}
    style={
      Object {
        "--link-color": "#027EB5",
        "--link-hover": "#0064A0",
      }
    }
  >
    <svg
      aria-hidden="true"
      className="prev-next-icon left-arrow"
      viewBox="0 0 24 24"
    >
      <path
        d="M13.293 6.293 7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
        fill="currentColor"
      />
    </svg>
    Previous
  </a>
  <a
    aria-label="Next Page"
    className="content-link prev-next-link side-right"
    data-analytics-label="next"
    data-testid="content-link-test"
    href="books/book-slug-1/pages/4-test-page-5"
    onClick={[Function]}
    style={
      Object {
        "--link-color": "#027EB5",
        "--link-hover": "#0064A0",
      }
    }
  >
    Next
    <svg
      aria-hidden="true"
      className="prev-next-icon right-arrow"
      viewBox="0 0 24 24"
    >
      <path
        d="M10.707 17.707 16.414 12l-5.707-5.707-1.414 1.414L13.586 12l-4.293 4.293z"
        fill="currentColor"
      />
    </svg>
  </a>
</div>
`;

exports[`PrevNextBar renders only \`next\` element correctly 1`] = `
<div
  className="prev-next-bar-wrapper disable-print"
  data-analytics-region="prev-next"
  style={
    Object {
      "--content-text-width": "82.5rem",
      "--neutral-darkest": "#e5e5e5",
      "--text-color": "#424242",
      "--text-regular-line-height": "2.5rem",
    }
  }
>
  <span
    aria-hidden={true}
  />
  <a
    aria-label="Next Page"
    className="content-link prev-next-link side-right"
    data-analytics-label="next"
    data-testid="content-link-test"
    href="books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units"
    onClick={[Function]}
    style={
      Object {
        "--link-color": "#027EB5",
        "--link-hover": "#0064A0",
      }
    }
  >
    Next
    <svg
      aria-hidden="true"
      className="prev-next-icon right-arrow"
      viewBox="0 0 24 24"
    >
      <path
        d="M10.707 17.707 16.414 12l-5.707-5.707-1.414 1.414L13.586 12l-4.293 4.293z"
        fill="currentColor"
      />
    </svg>
  </a>
</div>
`;

exports[`PrevNextBar renders only \`prev\` element correctly 1`] = `
<div
  className="prev-next-bar-wrapper disable-print"
  data-analytics-region="prev-next"
  style={
    Object {
      "--content-text-width": "82.5rem",
      "--neutral-darkest": "#e5e5e5",
      "--text-color": "#424242",
      "--text-regular-line-height": "2.5rem",
    }
  }
>
  <a
    aria-label="Previous Page"
    className="content-link prev-next-link side-left"
    data-analytics-label="prev"
    data-testid="content-link-test"
    href="books/book-slug-1/pages/d-glossary-of-key-symbols-and-notation"
    onClick={[Function]}
    style={
      Object {
        "--link-color": "#027EB5",
        "--link-hover": "#0064A0",
      }
    }
  >
    <svg
      aria-hidden="true"
      className="prev-next-icon left-arrow"
      viewBox="0 0 24 24"
    >
      <path
        d="M13.293 6.293 7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
        fill="currentColor"
      />
    </svg>
    Previous
  </a>
  <span
    aria-hidden={true}
  />
</div>
`;
